--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.1.1",
     "@nestjs/typeorm": "^11.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.2",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.22",
     "typescript": "^5.0.0"
   },
