--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.0.0",
+    "@types/uuid": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "pg": "^8.14.1",
@@ -36,7 +37,8 @@
     "rxjs": "^7.8.2",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.22",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^10.0.0",
